@@ -1,3 +1,9 @@
+2013-10-14  James Hunt  <james.hunt@ubuntu.com>
+
+	* src/procenv.c: Remove "(linux)" suffix from capabilities, cgroups
+	  and oom output: they are not displayed on other platforms, so the
+	  information is redundant.
+
 2013-10-13  James Hunt  <james.hunt@ubuntu.com>
 
 	* TODO: Update.
